--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -8,5 +8,37 @@
 </head>
 <body>
     
+    <div class="main">
+        <div class="left-top-left">
+            <div class="square"></div>
+        </div>
+
+
+        <div class="left-top-right">
+            <h4>Menu</h4>
+            <h5>Home Page</h5>
+            <h5>Portfolio</h5>
+            <h5>Fashion Week -&copy;2021</h5>
+            <h5>News/Articles</h5>
+            <h5>Contact</h5>
+        </div>
+
+
+        <div class="left-center">
+            <h1>Select</h1>
+            <h1>Fashion</h1>
+            <h1>Mod.05 -</h1>
+            <h1>Scene</h1>
+        </div>
+
+
+        <div class="left-bottom">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta perspiciatis, doloremque iure fuga nihil,<br> voluptas veritatis doloribus <br></p>
+        </div>
+
+
+        <div class="right"></div>
+    </div>
+
 </body>
 </html>
