--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
+    rel="stylesheet"/>
     <title>Document</title>
 </head>
 <body>
@@ -37,7 +39,14 @@
         </div>
 
 
-        <div class="right"></div>
+        <div class="right">
+            <video src="video.mp4" autoplay loop muted></video>
+        </div>
+
+        <div class="arrow">
+            <i class="ri-arrow-right-line"></i>
+        </div>
+
     </div>
 
 </body>
